<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskListActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ChooseStorageActivity">

    <TextView
        android:id="@+id/jsonTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/json_file"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/jsonIV"
        app:layout_constraintStart_toStartOf="@+id/jsonIV"
        app:layout_constraintTop_toBottomOf="@+id/jsonIV" />


    <TextView
        android:id="@+id/roomTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/room_database"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/roomIV"
        app:layout_constraintStart_toStartOf="@+id/roomIV"
        app:layout_constraintTop_toBottomOf="@+id/roomIV" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:checked="true"
        android:text="@string/generate_random_tasks"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/jsonIV"
        app:layout_constraintTop_toBottomOf="@+id/jsonTV" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/choose_storage_type"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/jsonIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/continue_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/roomIV"
        app:layout_constraintStart_toStartOf="@+id/jsonIV"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageView
        android:id="@+id/roomIV"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:alpha="0.3"
        android:background="@drawable/icon_border"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/jsonIV"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/database_android_green"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/jsonIV"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:alpha="0.3"
        android:background="@drawable/icon_border"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/roomIV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/json_file"
        tools:srcCompat="@tools:sample/avatars" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>